--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -7,6 +7,20 @@
         android:layout_height="match_parent"
         android:background="@color/bgcolor"
         tools:context=".FirstFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/employee_RecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:fastScrollEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="parent"
+           />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
