--- a/app/src/main/res/layout/item_employee.xml
+++ b/app/src/main/res/layout/item_employee.xml
@@ -13,6 +13,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
