--- a/app/src/main/res/layout/fragment_employeelist.xml
+++ b/app/src/main/res/layout/fragment_employeelist.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bgcolor"
-        tools:context=".fragment.FirstFragment">
+        tools:context=".fragment.EmployeeListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/employee_RecyclerView"
