--- a/app/src/main/res/layout/roles_dialog.xml
+++ b/app/src/main/res/layout/roles_dialog.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/_5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="@dimen/_8dp"
+        android:layout_marginStart="@dimen/_5dp"
+        android:text="@string/app_name"
+        android:textSize="@dimen/_14sp" />
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="@dimen/_50dp"
+        android:layout_height="@dimen/_50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_title"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
