--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_14sp">14sp</dimen>
     <dimen name="_10dp">10dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
 </resources>
