Done : Custom Employee Rules Dialog Design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#000000</color>
     <color name="green">#618a00</color>
     <color name="blue">#008cd0</color>
+    <color name="red">#e01600</color>
 </resources>
