--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="green">#618a00</color>
     <color name="blue">#008cd0</color>
     <color name="red">#e01600</color>
+    <color name="gray">#8B8B8A</color>
 </resources>
